generate code
