# app/controllers.go
@@ -1,5 +1,5 @@
 //************************************************************************//
-// API "Atlas": Application Controllers
+// API "rucci.io": Application Controllers
 //
 // Generated with goagen v0.0.1, command line:
 // $ goagen
@@ -32,6 +32,121 @@ func initService(service *goa.Service) {
 	// Setup default encoder and decoder
 	service.Encoder(goa.NewJSONEncoder, "*/*")
 	service.Decoder(goa.NewJSONDecoder, "*/*")
+}
+
+// PostController is the controller interface for the Post actions.
+type PostController interface {
+	goa.Muxer
+	Create(*CreatePostContext) error
+	Delete(*DeletePostContext) error
+	Show(*ShowPostContext) error
+	Update(*UpdatePostContext) error
+}
+
+// MountPostController "mounts" a Post resource controller on the given service.
+func MountPostController(service *goa.Service, ctrl PostController) {
+	initService(service)
+	var h goa.Handler
+	service.Mux.Handle("OPTIONS", "/posts", cors.HandlePreflight(service.Context, handlePostOrigin))
+	service.Mux.Handle("OPTIONS", "/posts/:postID", cors.HandlePreflight(service.Context, handlePostOrigin))
+
+	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		rctx, err := NewCreatePostContext(ctx, service)
+		if err != nil {
+			return err
+		}
+		if rawPayload := goa.ContextRequest(ctx).Payload; rawPayload != nil {
+			rctx.Payload = rawPayload.(*CreatePostPayload)
+		}
+		return ctrl.Create(rctx)
+	}
+	h = handlePostOrigin(h)
+	service.Mux.Handle("POST", "/posts", ctrl.MuxHandler("Create", h, unmarshalCreatePostPayload))
+	service.LogInfo("mount", "ctrl", "Post", "action", "Create", "route", "POST /posts")
+
+	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		rctx, err := NewDeletePostContext(ctx, service)
+		if err != nil {
+			return err
+		}
+		return ctrl.Delete(rctx)
+	}
+	h = handlePostOrigin(h)
+	service.Mux.Handle("DELETE", "/posts/:postID", ctrl.MuxHandler("Delete", h, nil))
+	service.LogInfo("mount", "ctrl", "Post", "action", "Delete", "route", "DELETE /posts/:postID")
+
+	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		rctx, err := NewShowPostContext(ctx, service)
+		if err != nil {
+			return err
+		}
+		return ctrl.Show(rctx)
+	}
+	h = handlePostOrigin(h)
+	service.Mux.Handle("GET", "/posts/:postID", ctrl.MuxHandler("Show", h, nil))
+	service.LogInfo("mount", "ctrl", "Post", "action", "Show", "route", "GET /posts/:postID")
+
+	h = func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		rctx, err := NewUpdatePostContext(ctx, service)
+		if err != nil {
+			return err
+		}
+		if rawPayload := goa.ContextRequest(ctx).Payload; rawPayload != nil {
+			rctx.Payload = rawPayload.(*UpdatePostPayload)
+		}
+		return ctrl.Update(rctx)
+	}
+	h = handlePostOrigin(h)
+	service.Mux.Handle("PUT", "/posts/:postID", ctrl.MuxHandler("Update", h, unmarshalUpdatePostPayload))
+	service.LogInfo("mount", "ctrl", "Post", "action", "Update", "route", "PUT /posts/:postID")
+}
+
+// handlePostOrigin applies the CORS response headers corresponding to the origin.
+func handlePostOrigin(h goa.Handler) goa.Handler {
+	return func(ctx context.Context, rw http.ResponseWriter, req *http.Request) error {
+		origin := req.Header.Get("Origin")
+		if origin == "" {
+			// Not a CORS request
+			return h(ctx, rw, req)
+		}
+		if cors.MatchOrigin(origin, "http://swagger.localhost") {
+			ctx = goa.WithLogContext(ctx, "origin", origin)
+			rw.Header().Set("Access-Control-Allow-Origin", "http://swagger.localhost")
+			rw.Header().Set("Vary", "Origin")
+			rw.Header().Set("Access-Control-Max-Age", "600")
+			rw.Header().Set("Access-Control-Allow-Credentials", "true")
+			if acrm := req.Header.Get("Access-Control-Request-Method"); acrm != "" {
+				// We are handling a preflight request
+				rw.Header().Set("Access-Control-Allow-Methods", "GET, POST, PUT, PATCH, DELETE")
+			}
+			return h(ctx, rw, req)
+		}
+
+		return h(ctx, rw, req)
+	}
+}
+
+// unmarshalCreatePostPayload unmarshals the request body into the context request data Payload field.
+func unmarshalCreatePostPayload(ctx context.Context, service *goa.Service, req *http.Request) error {
+	payload := &createPostPayload{}
+	if err := service.DecodeRequest(req, payload); err != nil {
+		return err
+	}
+	if err := payload.Validate(); err != nil {
+		return err
+	}
+	goa.ContextRequest(ctx).Payload = payload.Publicize()
+	return nil
+}
+
+// unmarshalUpdatePostPayload unmarshals the request body into the context request data Payload field.
+func unmarshalUpdatePostPayload(ctx context.Context, service *goa.Service, req *http.Request) error {
+	payload := &updatePostPayload{}
+	if err := service.DecodeRequest(req, payload); err != nil {
+		return err
+	}
+	goa.ContextRequest(ctx).Payload = payload.Publicize()
+	return nil
 }
 
 // UserController is the controller interface for the User actions.
